Prevent jumpines in IE8 during typing

--- a/app/assets/stylesheets/ce/base.sass
+++ b/app/assets/stylesheets/ce/base.sass
@@ -143,8 +143,9 @@ body, p, ol, ul, td, textarea
 .hide
 	display: none
 
-.clear_both
+.clear_both, .clear
 	clear: both
+	border: 1px solid transparent
 	
 =radius
 	-webkit-border-radius: 10px
